small updates and fixes.