@@ -28,6 +28,8 @@ application {
         "-Djava.security.manager=allow",
         "--add-exports",
         "kotlin.reflect/kotlin.reflect.jvm.internal=com.fasterxml.jackson.kotlin",
+        "--add-reads",
+        "kotlin.stdlib=kotlinx.coroutines.core.jvm"
     )
 }
 
